--- a/Ultra sonic.X/nbproject/Makefile-genesis.properties
+++ b/Ultra sonic.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Wed Feb 26 15:22:16 MST 2025
+#Wed Mar 05 16:16:36 MST 2025
 default.languagetoolchain.version=3.00
 default.Pack.dfplocation=C\:\\Users\\UOC\\.mchp_packs\\Microchip\\AVR-Dx_DFP\\2.6.303
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.00\\bin
 host.id=j1ll-lx4o-q
-default.platformTool.md5=null
-configurations-xml=89241cf45dfb1cdf5333e9998d186aed
+configurations-xml=5769ee4a3d0d870f099158922e46f198
+default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=506ca2899bc64b6f3f0351c5bae4b32b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
 proj.dir=C\:\\Users\\UOC\\OneDrive - University of Calgary\\ENEL 300\\Code\\RC-Car\\Ultra sonic.X
