Screen and ADC initialization

--- a/Ultra sonic.X/nbproject/Makefile-genesis.properties
+++ b/Ultra sonic.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Mar 14 12:07:53 MDT 2025
+#Mon Apr 21 17:38:36 MDT 2025
 default.languagetoolchain.version=3.00
-default.Pack.dfplocation=C\:\\Users\\UOC\\.mchp_packs\\Microchip\\AVR-Dx_DFP\\2.6.303
+default.Pack.dfplocation=
 default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=12722e6d79d676de80101102f40a9a53
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.00\\bin
-host.id=j1ll-lx4o-q
+host.id=5ap2-ynjq-c
 configurations-xml=c44f6df2c27e0246cae0b523a8c4a79e
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=C\:\\Users\\UOC\\OneDrive - University of Calgary\\ENEL 300\\Code\\RC-Car\\Ultra sonic.X
+proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\Ultra sonic.X
 host.platform=windows
