ultra sonic not working

--- a/RF.X/nbproject/Makefile-genesis.properties
+++ b/RF.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Mon Apr 21 21:52:13 MDT 2025
+#Mon Apr 21 21:51:56 MDT 2025
 default.languagetoolchain.version=3.00
 default.Pack.dfplocation=
 conf.ids=default
@@ -9,5 +9,5 @@ configurations-xml=11937c18aca00c868e4465fbe33bf2e7
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=506ca2899bc64b6f3f0351c5bae4b32b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\Reciever.X
+proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\RF.X
 host.platform=windows
