--- a/Ultra sonic.X/nbproject/Makefile-genesis.properties
+++ b/Ultra sonic.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Mon Apr 21 17:38:36 MDT 2025
+#Tue Apr 22 21:39:56 MDT 2025
 default.languagetoolchain.version=3.00
-default.Pack.dfplocation=
-default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=12722e6d79d676de80101102f40a9a53
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\AVR-Dx_DFP\\2.4.286
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.00\\bin
 host.id=5ap2-ynjq-c
-configurations-xml=c44f6df2c27e0246cae0b523a8c4a79e
+configurations-xml=5b81c72f02a6419cf8e3c0c4e24b75a2
+default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=506ca2899bc64b6f3f0351c5bae4b32b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
 proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\Ultra sonic.X
