--- a/Reciever.X/nbproject/Makefile-genesis.properties
+++ b/Reciever.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Apr 21 21:52:13 MDT 2025
+#Thu Apr 24 22:30:17 MDT 2025
 default.languagetoolchain.version=3.00
-default.Pack.dfplocation=
+default.Pack.dfplocation=C\:\\Users\\UOC\\.mchp_packs\\Microchip\\AVR-Dx_DFP\\2.6.303
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.00\\bin
-host.id=5ap2-ynjq-c
-configurations-xml=11937c18aca00c868e4465fbe33bf2e7
+host.id=j1ll-lx4o-q
+configurations-xml=31931a894c0552b13a2a396de4c36058
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=506ca2899bc64b6f3f0351c5bae4b32b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\Reciever.X
+proj.dir=C\:\\Users\\UOC\\OneDrive - University of Calgary\\ENEL 300\\Code\\RC-Car\\Reciever.X
 host.platform=windows
