--- a/RC-Car.X/nbproject/Makefile-genesis.properties
+++ b/RC-Car.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Apr 24 10:38:05 MDT 2025
+#Thu Apr 24 22:28:45 MDT 2025
 default.languagetoolchain.version=3.00
-default.Pack.dfplocation=
+default.Pack.dfplocation=C\:\\Users\\UOC\\.mchp_packs\\Microchip\\AVR-Dx_DFP\\2.6.303
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.00\\bin
-host.id=5ap2-ynjq-c
-configurations-xml=00c66f7c73013077d39dd6b7f07b48bb
+host.id=j1ll-lx4o-q
+configurations-xml=d11fa7700d58a1c7bed5c96c8101ca58
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=506ca2899bc64b6f3f0351c5bae4b32b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=C\:\\Users\\Khai\\Downloads\\RC-CAR gitub\\RC-Car\\RC-Car.X
+proj.dir=C\:\\Users\\UOC\\OneDrive - University of Calgary\\ENEL 300\\Code\\RC-Car\\RC-Car.X
 host.platform=windows
